# bytestream

./: .gitignore  404.html  CMakeLists.txt  README.md  index.html  sitemap.xml
.github/workflows/: ci.yml
api/: index.html
api/reference/: index.html
changelog/: index.html
cmake/: ByteStreamConfig.cmake.in
coverage/: index.config.hpp.a8fbc7efd0a09335d391e56f52042fe2.html  index.functions.html  index.html  index.reader.hpp.381a1453b1bb1efb8dc49e0cb97b84c4.html  index.writer.hpp.3cf8281117978225bf3e4e0d2aefc5e9.html
examples/: CMakeLists.txt  basic_usage.cpp
examples/basic_usage/: CMakeLists.txt  main.cpp
examples/libversion/: CMakeLists.txt  main.cpp
guide/: index.html
guide/building/: index.html
guide/coverage/: index.html
guide/quick_start/: index.html
guide/roadmap/: index.html
include/bytestream/: config.hpp  core.hpp  reader.hpp  serialization.hpp  stream.hpp  version.hpp.in  writer.hpp
mkdocs/: mkdocs.yml
mkdocs/docs/: changelog.md  index.md
mkdocs/docs/api/: index.md  reference.md
mkdocs/docs/guide/: building.md  coverage.md  index.md
scripts/: gen_coverage.sh
search/: search_index.json
styles/: iframe.css  tasklist.css
tests/: CMakeLists.txt  test_reader.cpp
tests/endian/: CMakeLists.txt  endianness.test.cc
tests/reader/: CMakeLists.txt  reader.test.cc
tests/roundtrip/: CMakeLists.txt  roundtrip.test.cc
tests/serialization/: CMakeLists.txt  serialization.test.cc
tests/writer/: CMakeLists.txt  writer.test.cc
